--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,11 +1,13 @@
 [versions]
 agp = "8.7.3"
+imageLabeling = "17.0.9"
 kotlin = "2.0.0"
 coreKtx = "1.15.0"
 junit = "4.14-SNAPSHOT"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
 appcompat = "1.7.0"
+libraryVersion = "1.5.1"
 material = "1.12.0"
 
 activityKtx = "1.10.0"
@@ -45,6 +47,7 @@ navigationUiKtx = "2.8.6"
 otpviewVersion = "0.2.5"
 permissionx = "1.7.1"
 playServicesAuth = "21.3.0"
+playServicesLocation = "21.3.0"
 preferenceKtx = "1.2.1"
 recyclerview = "1.4.0"
 roundedimageview = "2.3.0"
@@ -77,6 +80,7 @@ window = "1.3.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+image-labeling = { module = "com.google.mlkit:image-labeling", version.ref = "imageLabeling" }
 junit = { group = "junit", name = "junit", version = "4.13.2" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
@@ -128,6 +132,7 @@ monitor = { module = "androidx.test:monitor", version.ref = "monitorVersion" }
 moshi = { module = "com.squareup.moshi:moshi", version.ref = "moshi" }
 permissionx = { module = "com.guolindev.permissionx:permissionx", version.ref = "permissionx" }
 play-services-auth = { module = "com.google.android.gms:play-services-auth", version.ref = "playServicesAuth" }
+play-services-location = { module = "com.google.android.gms:play-services-location", version.ref = "playServicesLocation" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "converterGson" }
 roundedimageview = { module = "com.makeramen:roundedimageview", version.ref = "roundedimageview" }
 sdp-android = { module = "com.intuit.sdp:sdp-android", version.ref = "sdpAndroid" }
@@ -135,6 +140,7 @@ semicirclearcprogressbar = { module = "com.github.hadibtf:SemiCircleArcProgressB
 sscustombottomnavigation = { module = "com.github.simformsolutions:SSCustomBottomNavigation", version.ref = "sscustombottomnavigation" }
 ssp-android = { module = "com.intuit.ssp:ssp-android", version.ref = "sspAndroid" }
 supernova-emoji = { module = "com.github.hani-momanii:SuperNova-Emoji", version.ref = "supernovaEmoji" }
+sweetalert-library = { module = "com.github.f0ris.sweetalert:library", version.ref = "libraryVersion" }
 timber = { module = "com.jakewharton.timber:timber", version.ref = "timber" }
 ucropnedit = { module = "com.github.krokyze:ucropnedit", version.ref = "ucropnedit" }
 firebase-auth = { group = "com.google.firebase", name = "firebase-auth", version.ref = "firebaseAuth" }
